# unified-api-platform

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh
services/analytics/: analytics-GET.json
services/cliente_historial/: routes.json  template.json  transformer.js
services/feedback/: feedback-GET.json  feedback-POST.json
services/healthz/: healthz-GET.json
services/plan_de_ruta/: routes.json  template.json  transformer.js
services/plan_ruta_avanzado/: plan_ruta_avanzado-GET.json
services/product_service/: product_service-GET.json  product_service-POST.json
services/user_service/: user_service-DELETE.json  user_service-GET.json  user_service-POST.json  user_service-PUT.json
src/: handlers.rs  main.rs  utils.rs
