[package]
name = "mock-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
actix-multipart = "0.7.2"
rquickjs = "0.10.0"
handlebars = "6.3.2"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
once_cell = "1.19"